# RaspberryPiPicoDroneProject

./: .gitmodules  CMakeCache.txt  CMakeLists.txt  main.cpp
Core/: Constants.cpp  FlightController.cpp  flight.cpp
Core/ChipRP2040/: HandlerPicoOne.cpp
Core/Common/: Configuration.cpp  Constants.cpp  InternalLib.cpp
Core/Common/Models/: StructuresForRC.cpp
Core/DataAndVideo/: CommunicationWIFI.cpp  HTTPRequests.cpp
Core/DataAndVideo/NRF24_guser210_NRFDemo/: NRF24.c  NRF24.h  Transceiver.cpp
Core/FileSystem/: SDCard.cpp  SDPicoGitProject.rar  hw_config.c
Core/LightAutopilot/: AutopilotFollows.cpp  AutopilotGlobal.cpp  AutopilotInBuilding.cpp  AutopilotInForrest.cpp  Engine.cpp
Core/ManualControl/: Engine.cpp  RemoteControlStation.cpp
Core/Sensors/: AccelGyro-GY-521-MPU6050.cpp  BMP280.cpp  Barometer-GY-BM-280.cpp  Battery.cpp  Buzzer-HW508.cpp  HMC5883L.cpp  HandlerSensorsData.cpp  MPU6050.cpp  MPU6050Handler.cpp  TestSensorText.cpp
Core/Sensors/MPU6050I2Cdev/: MPU6050.cpp  MPU6050_6Axis_MotionApps_V6_12.h  mpu6050_calibration.cpp
